# kontracts

./: README.md
kontracs/: Cargo.toml
kontracs/kontracts-executor/: Cargo.toml
kontracs/kontracts-executor/src/: lib.rs
kontracs/node/: Cargo.toml
kontracs/node/src/: service.rs
kontracs/pallets/kontracts/: Cargo.toml
kontracs/pallets/kontracts/src/: lib.rs  mock.rs  tests.rs
kontracs/pallets/kontracts/wasm_test/: collantz_conjecture.rs  collantz_conjecture.wasm  delete.rs  delete.wasm  empty_execution.rs  empty_execution.wasm  loop.rs  loop.wasm  panic.rs  panic.wasm  read.rs  read.wasm  write_8B.rs  write_8B.wasm  write_and_read_16B.wasm
kontracs/runtime/: Cargo.toml
kontracs/runtime/src/: lib.rs
rust_kontract/: Cargo.toml  clean_build_compres.sh
rust_kontract/kontracts-proc-macro/: Cargo.toml
rust_kontract/kontracts-proc-macro/src/: lib.rs
rust_kontract/src/: lib.rs
