[package]
name = "kontracs-executor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
kontracts-proc-macro = { path = "kontracts-proc-macro"}
parity-scale-codec = { version = "3.3.0", default-features = false }
wee_alloc = "0.4.5"
